<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="change">change</string>
    <string name="reset">reset</string>
    <string name="termsTitle">Пользовательское соглашение</string>
    <string name="sex_all">Любой</string>
    <string name="sex_all2">Любой пол</string>
    <string name="sex_girl">Девочки</string>
    <string name="sex_man">Мальчики</string>
    <string name="all_kinds">Все</string>
    <string name="all_kinds2">Все виды</string>
    <string name="all_breeds">Все породы</string>
    <string name="no_breeds">Без породы</string>
    <string name="other_kinds">Разные виды</string>
    <string name="contin">Продолжить</string>
    <string name="share">Пригласить друзей</string>
    <string name="vote_list_empty_">Вы проголосовали за всех \nпитомцев с интересующими вас параметрами</string>
    <string name="vote_list_empty_text">Пригласите друзей, чтобы вам было интереснее и веселее.</string>
    <string name="bonus">БОНУС</string>
    <string name="bonus_50">+50</string>
    <string name="bonus_text">Евгений, вы совершили 50 голосований и Марсик получил +50 баллов к своей популярности</string>
    <string name="name">Имя</string>
    <string name="family">Фамилия</string>
    <string name="country">Страна</string>
    <string name="add_photos">Добавление фотографий</string>
    <string name="add_photos_text">При размещении любой рекламы и фотографий не соответствующих тематике приложения ваш профиль будет заблокирован навсегда.</string>
    <string name="ok">Хорошо</string>
    <string name="all_photos">Все фотографии</string>
    <string name="cancel">Отменить</string>
    <string name="sex_girl_one">Девочка</string>
    <string name="sex_man_one">Мальчик</string>
    <string name="sex_no">Бесполое</string>
    <string name="world">Мир</string>
    <string name="rating">Рейтинг</string>
    <string name="error_location_rating">Чтобы смотреть рейтинг по городам и странам  заполните ваш профиль.</string>
    <string name="next">Далее</string>

    //DATES
    <string name="month1">мес.</string>
    <string name="profile">Профиль</string>
    <string name="dialog_select_contry">Выбирите сначала вашу страну.</string>
    <string name="remove">Удалить</string>
    <string name="exit">Выход</string>
    <string name="exit_question">Вы уверены, что хотите выйти?</string>
    <string name="exit2">Выйти</string>
    <string name="remove_account">Удалить профиль</string>
    <string name="remove_account_info">Ваш профиль будет удален навсегда без возможности восстановления.</string>
    <string name="my_pet">Мой питомец</string>
    <string name="dialog_select_kind">Выбирите сначала вид вашего питомца.</string>
    <string name="breed">Порода</string>
    <string name="delete_photo">Удалить фото</string>

</resources>