<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.petsvote.ui.SimpleSFTextView
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/title_color"
            android:text="@string/my_pet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="@color/sub_text_color"
            android:text="@string/dialog_select_kind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.petsvote.ui.SimpleSFTextView
            android:id="@+id/ok"
            android:layout_marginTop="42dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/ui_primary"
            android:text="@string/ok"
            android:layout_width="match_parent"
            android:layout_height="30dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>