<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/title_color"
                android:text="@string/add_photos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="@color/ui_primary"
                android:text="@string/add_photos_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <com.petsvote.ui.SFTextView
                android:id="@+id/ok"
                android:layout_marginTop="42dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/ui_primary"
                android:text="@string/ok"
                android:layout_width="match_parent"
                android:layout_height="30dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout >