<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:cardCornerRadius="16dp"
    app:cardElevation="0dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.petsvote.ui.SimpleSFTextView
            android:textColor="@color/title_color"
            android:textSize="20sp"
            android:text="@string/rating"
            android:gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:gravity="center"
            android:layout_marginTop="12dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:textSize="15sp"
            android:text="@string/error_location_rating"
            android:textColor="@color/sub_text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:background="@color/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="65dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:background="@drawable/item_list_state"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.petsvote.ui.SimpleSFTextView
                    android:text="@string/cancel"
                    android:textSize="20sp"
                    android:textColor="@color/ui_primary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:background="@drawable/item_list_state"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.petsvote.ui.SimpleSFTextView
                    android:text="@string/next"
                    android:textSize="20sp"
                    android:textColor="@color/ui_primary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>