<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:background="@android:color/transparent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.petsvote.ui.SimpleSFTextView
                android:textColor="@color/title_color"
                android:textSize="20sp"
                android:text="@string/exit"
                android:gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:gravity="center"
                android:layout_marginTop="12dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:textSize="15sp"
                android:text="@string/exit_question"
                android:textColor="@color/ui_primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:layout_marginTop="20dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:background="@color/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:weightSum="2"
                android:layout_width="match_parent"
                android:layout_height="65dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cancel"
                    android:background="@drawable/item_list_state"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.petsvote.ui.SimpleSFTextView
                        android:text="@string/cancel"
                        android:textSize="20sp"
                        android:textColor="@color/ui_primary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/exit"
                    android:background="@drawable/item_list_state"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.petsvote.ui.SimpleSFTextView
                        android:text="@string/exit2"
                        android:textSize="20sp"
                        android:textColor="@color/ui_primary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

</FrameLayout>